--- a/blogpost.html
+++ b/blogpost.html
@@ -7,8 +7,13 @@
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
-    <h1>aqui vamos a hacer un blog post</h1>
-    <p>este es el parrafo de inicio</p>
+    <div id="container">
+        <dir id="post">
+            <h1>Este es el titulo atractivo y interesante de post</h1>
+            <p>y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
+        </dir>
+    </div>
+    
     
 </body>
 </html>
