--- a/blogpost.html
+++ b/blogpost.html
@@ -9,7 +9,7 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            cabecera
+            Hyperblog <span id="tagline">Tu blog de confianza</span>
         </div>
         <dir id="post">
             <h1>Este es el titulo atractivo y interesante de post</h1>
