--- a/blogpost.html
+++ b/blogpost.html
@@ -11,6 +11,7 @@
         <dir id="post">
             <h1>Este es el titulo atractivo y interesante de post</h1>
             <p>y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
+            <p>los blog son la mejor forma de conpartir informacion</p>
         </dir>
     </div>
     
