agregue suscripcion, cambie la cabecera maestra y puse todo azul

--- a/blogpost.html
+++ b/blogpost.html
@@ -9,12 +9,13 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            Hyperblog <span id="tagline">Tu blog de confianza</span>
+            Hyperblog <span id="tagline">Tu blog de maestro</span>
         </div>
         <dir id="post">
             <h1>Este es el titulo atractivo y interesante de post</h1>
             <p>y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
             <p>los blog son la mejor forma de conpartir informacion</p>
+            <p>suscribete y dale like</p>        
         </dir>
     </div>
     
