--- a/blogpost.html
+++ b/blogpost.html
@@ -17,8 +17,12 @@
             <p>los blog son la mejor forma de conpartir informacion</p>
             <p>suscribete y dale like</p>        
         </dir>
+        <div id="footer">
+            Hecho con amor en platzi ♥
+        </div>
     </div>
     
     
 </body>
+
 </html>
