agregue una imagen al blog

--- a/blogpost.html
+++ b/blogpost.html
@@ -15,6 +15,7 @@
         <dir id="post">
             <h1>Este es el titulo atractivo y interesante de post</h1>
             <p>y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
+            <p><img src="img/equipo.jpg" whith="100%" alt=""></p>
             <p>los blog son la mejor forma de conpartir informacion</p>
             <p>suscribete y dale like</p>        
         </dir>
@@ -22,7 +23,7 @@
             Hecho con amor en platzi ♥
         </div>
     </div>
-    
+    ti
     
 </body>
 
