--- a/blogpost.html
+++ b/blogpost.html
@@ -14,25 +14,17 @@
         </div>
         <dir id="post">
             <h1>Este es el titulo atractivo y interesante de post</h1>
-<<<<<<< HEAD
             <p>y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
-            <p><img src="img/equipo.jpg" whith="100%" alt=""></p>
-=======
-            <p>y este es el p&aacute;rrafo de inicio donde vamos a explicar las cosas increíbles que se pueden hacer con ramas</p>
->>>>>>> 749c02c719fd0e49d031b0b1e95583d43c4ef26a
+            <img  whith="100%" alt="">
+           <img  src="https://i.imgur.com/H6cM2LC.jpg" >
             <p>los blog son la mejor forma de conpartir informacion</p>
             <p>suscr&iacute;bete y dale like</p>        
         </dir>
         <div id="footer">
             Hecho con amor en platzi ♥
         </div>
-<<<<<<< HEAD
     </div>
-    ti
-=======
-    '</div>
-    
->>>>>>> 749c02c719fd0e49d031b0b1e95583d43c4ef26a
+
     
 </body>
 
