--- a/blogpost.html
+++ b/blogpost.html
@@ -10,7 +10,7 @@
     <div id="container">
         <div id="cabecera">
             <img id="logo" src="img/DC.png" />
-            Hyperblog <span id="tagline">Tu blog de cabecera</span>
+            Hyperblog <span id="tagline">Tu blog de confianza</span>
         </div>
         <dir id="post">
             <h1>Este es el titulo atractivo y interesante de post</h1>
